agregando los carousel

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -287,8 +287,26 @@
   [breakpoints]="{ '1199px': '90vw', '575px': '95vw' }"
   [maximizable]="true"
 >
-  <div class="p-4">
-    <!-- Mostrar PDFs en iframes -->
+
+<p-carousel [value]="pdfs" [numVisible]="3" [numScroll]="3" [circular]="false" [responsiveOptions]="responsiveOptions" autoplayInterval="3000">
+    <ng-template let-pdf #item>
+        <div class="border border-surface rounded-border m-2 p-4">
+            <div class="mb-4">
+                <div class="relative mx-auto">
+                    <iframe [src]="pdf.url" type="application/pdf"></iframe>
+                </div>
+            </div>
+            <div class="mb-4 font-medium">{{ pdf.nombre }}</div>
+            <div class="flex justify-between items-center">
+                <span>
+                    <a [href]="pdf.url" target="_blank"><p-button icon="pi pi-download" severity="secondary" [outlined]="true" /></a>
+                </span>
+            </div>
+        </div>
+    </ng-template>
+</p-carousel>
+  <!-- <div class="p-4">
+    Mostrar PDFs en iframes
     <div *ngFor="let pdf of pdfs" class="mb-4">
       <h4>{{ pdf.nombre }}</h4>
       <iframe
@@ -301,7 +319,7 @@
     </div>
 
 
-    <!-- Mostrar botones de descarga para archivos de Excel y Word -->
+     Mostrar botones de descarga para archivos de Excel y Word
     <div *ngFor="let archivo of archivosDescargables" class="mb-4">
       <h4>{{ archivo.nombre }}</h4>
       <p-button
@@ -310,7 +328,14 @@
         (onClick)="descargarArchivo(archivo.url)"
       ></p-button>
     </div>
-  </div>
+  </div> -->
+</p-dialog>
+
+
+<p-dialog header="información" [modal]="true" [(visible)]="visible3" [style]="{ width: '50rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
+    <p>
+        Archivos no encontrados
+    </p>
 </p-dialog>
 
 <!-- <div *ngFor="let i of this.filteredProducts">
