--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -24,7 +24,7 @@
       <tr>
         <th>Proceso de Contratación</th>
         <th>Archivos</th>
-        <th>descripción</th>
+        <th>Descripción</th>
         <th>Total de Partidas</th>
       </tr>
     </ng-template>
@@ -34,7 +34,7 @@
           <p-button
             severity="info"
             (onClick)="filtrarProductos(product)"
-            class="mt-2"
+            class="mt-2 "
             (click)="showDialog(filteredProducts)"
           >
             {{ product.proceso_contratacion }}
