--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,22 +1,26 @@
 <app-topbar class="mb-6"></app-topbar>
 
-<div class="card mr-8 ml-8 mb-8 shadow-xl" style="margin-top: 75px">
+<div class="card mr-8 ml-8 mb-8 shadow-xl" style="margin-top: 75px; background-color: rgba(255, 255, 255, 0.591)">
   <p-table
+    #dt2
     [value]="products"
     dataKey="id"
     [tableStyle]="{ 'min-width': '60rem' }"
-    [expandedRowKeys]="expandedRows"
-    (onRowExpand)="onRowExpand($event)"
-    (onRowCollapse)="onRowCollapse($event)"
     showGridlines
+    [globalFilterFields]="['proceso_contratacion', 'country.proceso_contratacion', 'representative.proceso_contratacion', 'status']"
   >
     <ng-template #caption>
       <div class="flex flex-wrap justify-end gap-2">
         <p-iconfield iconPosition="left" class="ml-auto">
-          <p-inputicon>
-            <i class="pi pi-search"></i>
-          </p-inputicon>
-          <input pInputText type="text" placeholder="Buscar Proceso" />
+                <p-inputicon>
+                    <i class="pi pi-search"></i>
+                </p-inputicon>
+                <input
+                    pInputText
+                    type="text"
+                    (input)="onGlobalFilter(dt2, $event)"
+                    placeholder="Buscar Proceso"
+                />
         </p-iconfield>
       </div>
     </ng-template>
