--- a/src/app/landing/components/herowidget.html
+++ b/src/app/landing/components/herowidget.html
@@ -8,8 +8,8 @@
       <span class="typing-effect text-base sm:text-xl md:text-3xl lg:text-4xl" #typedText></span>
     </h1>
     <p class="font-normal mt-2 md:mt-4 text-white text-base sm:text-lg">
-      <span class="text-red-500 bg-white rounded px-2">JUNTOS SUMAMOS</span>
-      <span class="text-blue-500 bg-white rounded px-2 ml-2 sm:ml-4"><a href="jose.avif">DIVIDIDOS RESTAMOS</a></span>
+      <span class="text-red-500 bg-white rounded px-2">Metanol de Oriente Metor S A</span>
+      <span class="text-blue-500 bg-white rounded px-2 ml-2 sm:ml-4">DataLaing MaPreX</span>
     </p>
 <a href="/listado">
     <p-button
