--- a/src/app/landing/components/herowidget.html
+++ b/src/app/landing/components/herowidget.html
@@ -16,13 +16,24 @@
       type="button"
       label="COMENZAR"
       severity="danger"
-      class="mt-4 md:mt-8"
+      class="mt-8 md:mt-8 text-lg"
       >
     </p-button></a>
 
+    <style>
+
+    .logoMaprex{
+      margin-top: -7%;
+      margin-left: 70%;
+    }
+
+    </style>
+
+
+<div class="flex justify-center md:justify-end lg:justify-end ">
+    <a href="https://datalaing.net/#/login" class="w-100"><img src="maprexe.png" width="30% sm:w-56 md:w-10%" alt="Hero Image" class="logoMaprex sm:p-8 " /></a>
+</div>
 
   </div>
-  <div class="flex justify-center md:justify-end">
-    <img src="maprexe.png" width="40% sm:w-56 md:w-30%" alt="Hero Image" class="p-4 sm:p-8 mb-4" />
-  </div>
+
 </div>
