agregando mas cambios

--- a/src/app/landing/components/herowidget.html
+++ b/src/app/landing/components/herowidget.html
@@ -13,6 +13,7 @@
     </p>
 <a href="/listado">
     <p-button
+    icon="pi pi-play-circle"
       type="button"
       label="COMENZAR"
       severity="danger"
