--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,80 +1,101 @@
 <app-topbar class="mb-6"></app-topbar>
 
-<div class="card mr-8 ml-8 mb-8 shadow-xl" style="margin-top: 75px; background-color: rgba(255, 255, 255, 0.591)">
-     <marquee behavior="" direction="left" class="text-black">BIENVENIDOS A “CREACIÓN DE BASE DE DATOS DE MÁS DE 1000 PARTIDAS CON SUS ANÁLISIS DE PRECIOS UNITARIOS (APU) E INSUMOS, ASÍ COMO 4 PRESUPUESTOS
-      TIPO PARA METOR, SEGÚN ESPECIFICACIONES DEL CONTRATANTE EN ÁREAS DIVERSAS A SER ACORDADAS</marquee>
+<div
+  class="card mr-8 ml-8 mb-8 shadow-xl"
+  style="margin-top: 75px; background-color: rgba(255, 255, 255, 0.591)"
+>
+  <marquee behavior="" direction="left" class="text-black"
+    >BIENVENIDOS A “CREACIÓN DE BASE DE DATOS DE MÁS DE 1000 PARTIDAS CON SUS
+    ANÁLISIS DE PRECIOS UNITARIOS (APU) E INSUMOS, ASÍ COMO 4 PRESUPUESTOS TIPO
+    PARA METOR, SEGÚN ESPECIFICACIONES DEL CONTRATANTE EN ÁREAS DIVERSAS A SER
+    ACORDADAS</marquee
+  >
   <p-table
     #dt2
     [value]="products"
     dataKey="id"
     [tableStyle]="{ 'min-width': '60rem' }"
     showGridlines
-    [globalFilterFields]="['proceso_contratacion', 'country.proceso_contratacion', 'representative.proceso_contratacion', 'status']"
+    [globalFilterFields]="[
+      'proceso_contratacion',
+      'country.proceso_contratacion',
+      'representative.proceso_contratacion',
+      'status'
+    ]"
   >
-
     <ng-template #caption>
-
       <div class="flex flex-wrap justify-end gap-2">
         <p-iconfield iconPosition="left" class="ml-auto">
-                <p-inputicon>
-                    <i class="pi pi-search"></i>
-                </p-inputicon>
-                <input
-                    pInputText
-                    type="text"
-                    (input)="onGlobalFilter(dt2, $event)"
-                    placeholder="Buscar Proceso"
-                />
+          <p-inputicon>
+            <i class="pi pi-search"></i>
+          </p-inputicon>
+          <input
+            pInputText
+            type="text"
+            (input)="onGlobalFilter(dt2, $event)"
+            placeholder="Buscar Proceso"
+          />
         </p-iconfield>
       </div>
-
     </ng-template>
 
     <ng-template #header>
       <tr>
         <style>
-         .thPC{
+          .thPC {
             width: 15% !important;
             text-align: center;
           }
         </style>
-          <th>#</th>
+        <th>#</th>
         <th class="thPC"><i class="pi pi-box"></i> Proceso de Contratación</th>
         <th class="thPC"><i class="pi pi-file-import"></i> Documentación</th>
         <th><i class="pi pi-comment"></i> Descripción</th>
-        <th class="thPC"> <i class="pi pi-sort-numeric-down"></i> Total de Partidas</th>
+        <th class="thPC">
+          <i class="pi pi-sort-numeric-down"></i> Total de Partidas
+        </th>
       </tr>
     </ng-template>
-    <ng-template #body let-product let-expanded="expanded" >
+    <ng-template #body let-product let-expanded="expanded">
       <tr class="hover:bg-blue-400 hover:text-white">
- <td>{{ calculateRowIndex(dt2, product) }}</td>
-        <td style="text-align: center;">
-   <p-button
-    severity="info"
-    (onClick)="filtrarProductos(product)"
-    class="mt-2"
-    (click)="showDialog(filteredProducts)"
-    pTooltip="Ver proceso de Contratación"
-    tooltipPosition="left"
-    tooltipEvent="hover">
-   <p [ngStyle]="{ 'font-size': product.proceso_contratacion.length >= 16 ? '12px' : '17px',
-                 'width': product.proceso_contratacion.length > 16 ? '120%' : '125%' }"> {{ product.proceso_contratacion }} </p>
-</p-button>
+        <td>{{ calculateRowIndex(dt2, product) }}</td>
+        <td style="text-align: center">
+          <p-button
+            severity="info"
+            (onClick)="filtrarProductos(product)"
+            class="mt-2"
+            (click)="showDialog(filteredProducts)"
+            pTooltip="Ver proceso de Contratación"
+            tooltipPosition="left"
+            tooltipEvent="hover"
+          >
+            <p
+              [ngStyle]="{
+                'font-size':
+                  product.proceso_contratacion.length >= 16 ? '12px' : '17px',
+                width:
+                  product.proceso_contratacion.length > 16 ? '120%' : '125%'
+              }"
+            >
+              {{ product.proceso_contratacion }}
+            </p>
+          </p-button>
         </td>
-        <td style="text-align: center;">
-<p-button
-    icon="pi pi-eye"
-    severity="success"
-    class="mt-2"
-    (onClick)="archivo(product)"
-    pTooltip="Ver documentación"
-    tooltipPosition="top"
-    tooltipEvent="hover">
-</p-button>
+        <td style="text-align: center">
+          <p-button
+            icon="pi pi-eye"
+            severity="success"
+            class="mt-2"
+            (onClick)="archivo(product)"
+            pTooltip="Ver documentación"
+            tooltipPosition="top"
+            tooltipEvent="hover"
+          >
+          </p-button>
         </td>
 
         <td>{{ product.descripcion_corta_nombre_contrato }}</td>
-        <td style="text-align: center;">{{ product.no_partida }}</td>
+        <td style="text-align: center">{{ product.no_partida }}</td>
       </tr>
     </ng-template>
     <ng-template #expandedrow let-product>
@@ -82,54 +103,54 @@
         <td colspan="7">
           <div class="p-4">
             <h5>Ordenando por {{ product.proceso_contratacion }}</h5>
-              <p-multiselect
-                class="mb-9"
-                display="chip"
-                [options]="cols"
-                [(ngModel)]="selectedColumns"
-                optionLabel="header"
-                selectedItemsLabel="{0} columns selected"
-                [style]="{ 'min-width': '200px' }"
-                placeholder="Choose Columns"
-              />
-              <p-button
-                (onClick)="archivo(product.proceso_contratacion)"
-                class="ml-8"
-                (click)="showDialog(filteredProducts)"
-                >VER ARCHIVOS - {{ product.proceso_contratacion }}</p-button
-              >
-              <p-table
-                stripedRows
-                class="shadow-lg"
-                [value]="filteredProducts"
-                [columns]="selectedColumns"
-                scrollable="true"
-                [style]="{ width: '1725px' }"
-                scrollHeight="400px"
-                showGridlines
-                [resizableColumns]="true"
-                [columns]="cols"
-                [reorderableColumns]="true"
-              >
-                <ng-template #header>
-                  <tr>
-                    <th
-                      *ngFor="let col of selectedColumns"
-                      pResizableColumn
-                      pReorderableColumn
-                    >
-                      {{ col.header }}
-                    </th>
-                  </tr>
-                </ng-template>
-                <ng-template #body let-item>
-                  <tr>
-                    <td *ngFor="let col of selectedColumns">
-                      {{ item[col.field] || "- Sin información -" }}
-                    </td>
-                  </tr>
-                </ng-template>
-              </p-table>
+            <p-multiselect
+              class="mb-9"
+              display="chip"
+              [options]="cols"
+              [(ngModel)]="selectedColumns"
+              optionLabel="header"
+              selectedItemsLabel="{0} columns selected"
+              [style]="{ 'min-width': '200px' }"
+              placeholder="Choose Columns"
+            />
+            <p-button
+              (onClick)="archivo(product.proceso_contratacion)"
+              class="ml-8"
+              (click)="showDialog(filteredProducts)"
+              >VER ARCHIVOS - {{ product.proceso_contratacion }}</p-button
+            >
+            <p-table
+              stripedRows
+              class="shadow-lg"
+              [value]="filteredProducts"
+              [columns]="selectedColumns"
+              scrollable="true"
+              [style]="{ width: '1725px' }"
+              scrollHeight="400px"
+              showGridlines
+              [resizableColumns]="true"
+              [columns]="cols"
+              [reorderableColumns]="true"
+            >
+              <ng-template #header>
+                <tr>
+                  <th
+                    *ngFor="let col of selectedColumns"
+                    pResizableColumn
+                    pReorderableColumn
+                  >
+                    {{ col.header }}
+                  </th>
+                </tr>
+              </ng-template>
+              <ng-template #body let-item>
+                <tr>
+                  <td *ngFor="let col of selectedColumns">
+                    {{ item[col.field] || "- Sin información -" }}
+                  </td>
+                </tr>
+              </ng-template>
+            </p-table>
           </div>
         </td>
       </tr>
@@ -138,25 +159,45 @@
 </div>
 
 <p-dialog
-  header="Procesos de Contratación {{ this.informacion?.proceso_contratacion }} - {{ this.informacion?.descripcion_corta_nombre_contrato }} "
   [modal]="true"
   [(visible)]="visible"
-
-
+  [style]="{ width: '80vw', height: '40vw' }"
   [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
   [contentStyle]="{ 'max-width': '90vw' }"
   [maximizable]="true"
 >
+  <div
+    style="
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+      margin-bottom: 20px;
+    "
+  >
+    <span>
+      PROCESOS DE CONTRATACIÓN {{ this.informacion?.proceso_contratacion }} -
+      {{ this.informacion?.descripcion_corta_nombre_contrato }}</span
+    >
+  </div>
+<!-- display="chip" -->
   <p-multiselect
-    class="mb-9"
     display="chip"
     [options]="cols"
     [(ngModel)]="selectedColumns"
     optionLabel="header"
+    [maxSelectedLabels]="12"
     selectedItemsLabel="{0} columns selected"
-    [style]="{ 'min-width': '200px' }"
-    placeholder="Choose Columns"
+    [style]="{
+      'justify-content': 'center',
+      'align-items': 'center',
+      'margin-bottom': '20px',
+      'width' : '100%',
+      'text-align': 'items-center'
+    }"
+    placeholder="SIN COLUMNAS SELECCIONADAS"
   />
+
   <div class="flex justify-center items-center">
     <p-table
       stripedRows
@@ -183,10 +224,13 @@
       </ng-template>
       <ng-template #body let-item>
         <tr>
-          <td class="hover:bg-blue-400 hover:text-white" *ngFor="let col of selectedColumns">
+          <td
+            class="hover:bg-blue-400 hover:text-white"
+            *ngFor="let col of selectedColumns"
+          >
             {{ item[col.field] || "- Sin información -" }}
           </td>
-          </tr>
+        </tr>
       </ng-template>
     </p-table>
   </div>
@@ -200,52 +244,99 @@
 </style>
 
 <p-dialog
-  header="ARCHIVOS DE PROCESOS DE CONTRATACIÓN {{ this.informacion?.proceso_contratacion }} - {{ this.informacion?.descripcion_corta_nombre_contrato }}"
   [modal]="true"
-  class="w-full"
   [(visible)]="visible2"
-  [contentStyle]="{ 'max-width': '90vw' }"
+  [contentStyle]="{ 'max-width': '70vw' }"
   [breakpoints]="{ '1199px': '90vw', '575px': '95vw' }"
   [maximizable]="true"
 >
-  <p-carousel [value]="pdfs" [numVisible]="3" [numScroll]="3" [circular]="false" [responsiveOptions]="responsiveOptions" autoplayInterval="3000">
-
-      <ng-template let-pdf #item>
-          <div class="border border-surface rounded-border m-2 p-4  flex flex-col items-center">
-              <div class="mb-4">
-                  <div class="relative mx-auto">
-                      <iframe [src]="pdf.url" class="w-full h-full" type="application/pdf"></iframe>
-                  </div>
-              </div>
-              <div class="mb-4 font-medium">{{ pdf.nombre }}</div>
-              <div class="flex justify-between items-center">
-                  <span>
-                      <a [href]="pdf.url" target="_blank"><p-button icon="pi pi-eye" severity="secondary" [outlined]="true" /></a>
-                  </span>
-              </div>
+  <div
+    style="
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+      margin-bottom: 35px;
+    "
+  >
+    <span
+      >ARCHIVOS DE PROCESOS DE CONTRATACIÓN
+      {{ this.informacion?.proceso_contratacion }} -
+      {{ this.informacion?.descripcion_corta_nombre_contrato }}</span
+    >
+  </div>
+  <p-carousel
+    [value]="pdfs"
+    [numVisible]="3"
+    [numScroll]="3"
+    [circular]="false"
+    [responsiveOptions]="responsiveOptions"
+    autoplayInterval="3000"
+  >
+    <style>
+      .largoh {
+        height: 450px;
+        width: 550px;
+      }
+      .borderg {
+        width: 590px;
+      }
+    </style>
+    <ng-template let-pdf #item>
+      <div
+        class="border border-surface borderg m-2 p-4 flex-col-6 items-center"
+      >
+        <div class="mb-4">
+          <div class="relative mx-auto">
+            <iframe
+              [src]="pdf.url"
+              class="largoh"
+              type="application/pdf"
+            ></iframe>
           </div>
-      </ng-template>
+        </div>
+
+        <div class="flex justify-between items-center">
+          <div class="mb-4 font-medium">{{ pdf.nombre }}</div>
+          <span>
+            <a [href]="pdf.url" target="_blank"
+              ><p-button
+                icon="pi pi-eye"
+                class="items-center"
+                severity="success"
+            /></a>
+          </span>
+        </div>
+      </div>
+    </ng-template>
   </p-carousel>
 
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-6">
-    <p-card *ngFor="let archivo of archivosDescargables" header="{{ archivo.nombre }}" class="flex justify-center items-center">
-        <div class="p-4 flex flex-col items-center">
-            <p-button
-                label="Descargar"
-                icon="pi pi-download"
-                (onClick)="descargarArchivo(archivo.url)"
-                class="p-button-rounded"
-            ></p-button>
-        </div>
+  <div
+    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-6"
+  >
+    <p-card
+      *ngFor="let archivo of archivosDescargables"
+      header="{{ archivo.nombre }}"
+      class="flex justify-center items-center"
+    >
+      <div class="p-4 flex flex-col items-center">
+        <p-button
+          label="Descargar"
+          icon="pi pi-download"
+          (onClick)="descargarArchivo(archivo.url)"
+          class="p-button-rounded"
+        ></p-button>
+      </div>
     </p-card>
-</div>
-
+  </div>
 </p-dialog>
 
-
-<p-dialog header="información" [modal]="true" [(visible)]="visible3" [style]="{ width: '50rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
-    <p>
-        Archivos no encontrados
-    </p>
+<p-dialog
+  header="información"
+  [modal]="true"
+  [(visible)]="visible3"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <p>Archivos no encontrados</p>
 </p-dialog>
-
