--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -67,15 +67,11 @@
             (click)="showDialog(filteredProducts)"
             pTooltip="Ver proceso de Contratación"
             tooltipPosition="left"
+            [style]="{'width': '200px', 'height': '40px'}"
             tooltipEvent="hover"
           >
             <p
-              [ngStyle]="{
-                'font-size':
-                  product.proceso_contratacion.length >= 16 ? '12px' : '17px',
-                width:
-                  product.proceso_contratacion.length > 16 ? '120%' : '125%'
-              }"
+
             >
               {{ product.proceso_contratacion }}
             </p>
@@ -163,7 +159,7 @@
   [(visible)]="visible"
   [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
   [contentStyle]="{ 'max-width': '80vw' }"
-  [maximizable]="true"
+  [maximizable]="false"
 >
   <div
     style="
@@ -197,13 +193,13 @@
     placeholder="SIN COLUMNAS SELECCIONADAS"
   />
 
-  <div class="flex justify-center items-center">
+  <div class="justify-center items-center">
     <p-table
       stripedRows
       [value]="filteredProducts"
       [columns]="selectedColumns"
       scrollable="true"
-      [style]="{ width: '1360px' }"
+      [style]="{ width: '100%' }"
       scrollHeight="650px"
       showGridlines
       [resizableColumns]="true"
@@ -247,7 +243,7 @@
   [(visible)]="visible2"
   [contentStyle]="{ 'max-width': '100vw' }"
   [breakpoints]="{ '1199px': '90vw', '575px': '95vw' }"
-  [maximizable]="true"
+  [maximizable]="false"
 >
   <div
     style="
