--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -12,7 +12,7 @@
   >
   <p-table
     #dt2
-    [value]="products"
+    [value]="procesosUnicosArray"
     dataKey="id"
     [tableStyle]="{ 'min-width': '60rem' }"
     showGridlines
