--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -49,11 +49,12 @@
         </style>
         <th>#</th>
         <th class="thPC"><i class="pi pi-box"></i> Proceso de Contratación</th>
-        <th class="thPC"><i class="pi pi-file-import"></i> Documentación</th>
+
         <th><i class="pi pi-comment"></i> Descripción</th>
         <th class="thPC">
           <i class="pi pi-sort-numeric-down"></i> Total de Partidas
         </th>
+           <th class="thPC"><i class="pi pi-file-import"></i> Documentación</th>
       </tr>
     </ng-template>
     <ng-template #body let-product let-expanded="expanded">
@@ -77,7 +78,11 @@
             </p>
           </p-button>
         </td>
-        <td style="text-align: center">
+
+
+        <td>{{ product.descripcion_corta_nombre_contrato }}</td>
+        <td style="text-align: center">{{ product.partidas_totales }}</td>
+          <td style="text-align: center">
           <p-button
             icon="pi pi-eye"
             severity="success"
@@ -89,9 +94,6 @@
           >
           </p-button>
         </td>
-
-        <td>{{ product.descripcion_corta_nombre_contrato }}</td>
-        <td style="text-align: center">{{ product.no_partida }}</td>
       </tr>
     </ng-template>
     <ng-template #expandedrow let-product>
@@ -158,7 +160,7 @@
   [modal]="true"
   [(visible)]="visible"
   [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
-  [contentStyle]="{ 'max-width': '80vw' }"
+  [contentStyle]="{ 'max-width': '90vw' }"
   [maximizable]="false"
 >
   <div
@@ -195,11 +197,12 @@
 
   <div class="justify-center items-center">
     <p-table
-      stripedRows
+     #dt3
+
       [value]="filteredProducts"
       [columns]="selectedColumns"
       scrollable="true"
-      [style]="{ width: '100%' }"
+      [style]="{ width: '100%', overflow: 'auto' }"
       scrollHeight="650px"
       showGridlines
       [resizableColumns]="true"
@@ -207,7 +210,10 @@
       [reorderableColumns]="true"
     >
       <ng-template #header>
-        <tr>
+        <tr >
+          <th>
+            #
+          </th>
           <th
             *ngFor="let col of selectedColumns"
             pResizableColumn
@@ -218,13 +224,14 @@
         </tr>
       </ng-template>
       <ng-template #body let-item>
-        <tr>
+        <tr  class="hover:bg-blue-400 hover:text-white">
+           <td>{{ calculateRowIndex(dt3, item) }}</td>
           <td
-            class="hover:bg-blue-400 hover:text-white"
-            *ngFor="let col of selectedColumns"
-          >
-            {{ item[col.field] || "- Sin información -" }}
-          </td>
+  *ngFor="let col of selectedColumns"
+  [ngClass]="col.field === 'clasificacion_dificulta_apu' ? getDificultadClass(item['clasificacion_dificulta_apu']) : ''"
+  [innerHTML]="insertLineBreaks(item[col.field])"
+>
+</td>
         </tr>
       </ng-template>
     </p-table>
@@ -241,7 +248,7 @@
 <p-dialog
   [modal]="true"
   [(visible)]="visible2"
-  [contentStyle]="{ 'max-width': '100vw' }"
+  [contentStyle]="{ 'max-width': '90vw' }"
   [breakpoints]="{ '1199px': '90vw', '575px': '95vw' }"
   [maximizable]="false"
 >
@@ -270,8 +277,8 @@
   >
     <style>
       .largoh {
-        height: 450px;
-        width: 550px;
+        height: 250px;
+        width: 350px;
       }
       .borderg {
         width: 590px;
@@ -306,6 +313,12 @@
     </ng-template>
   </p-carousel>
 
+  <style>
+    .anchoBoton{
+      width: 25%
+    }
+
+  </style>
   <div
     class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-6"
   >
@@ -314,15 +327,36 @@
       header="{{ archivo.nombre }}"
       class="flex justify-center items-center"
     >
-      <div class="p-4 flex flex-col items-center">
+      <div class="p-4">
         <p-button
-          label="Descargar"
+        severity="success"
+          label="Descargar xlsx"
           icon="pi pi-download"
           (onClick)="descargarArchivo(archivo.url)"
-          class="p-button-rounded"
+          class="p-button-rounded anchoBoton"
         ></p-button>
       </div>
     </p-card>
+
+
+    <p-card
+      *ngFor="let archivo of imagenes"
+      header="{{ archivo.nombre }}"
+      class="flex justify-center items-center"
+    >
+      <div class="p-4 ">
+   <p-button
+          severity="info"
+          label="Descargar Imagen"
+          icon="pi pi-download"
+          (onClick)="descargarArchivo(archivo.url)"
+          class="p-button-rounded anchoBoton"
+        ></p-button>
+      </div>
+
+    </p-card>
+
+
   </div>
 </p-dialog>
 
