--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -286,7 +286,7 @@
     </style>
     <ng-template let-pdf #item>
       <div
-        class="border border-surface borderg m-2 p-4 flex-col-6 items-center"
+        class="border border-surface borderg m-2 p-4 items-center"
       >
         <div class="mb-4">
           <div class="relative mx-auto">
