--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -330,7 +330,7 @@
       <div class="p-4">
         <p-button
         severity="success"
-          label="Descargar xlsx"
+          label="Descargar archivo"
           icon="pi pi-download"
           (onClick)="descargarArchivo(archivo.url)"
           class="p-button-rounded anchoBoton"
