--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -19,3 +19,22 @@
   /* Rojo oscuro */
 }
 
+
+.p-button-custom-pdf {
+  color: red !important;
+  /* Color de texto rojo */
+}
+
+.p-button-custom-docx {
+  color: blue !important;
+  /* Color de texto azul */
+}
+
+.p-button-custom-xlsx {
+  color: green !important;
+  /* Color de texto verde */
+}
+        .thPC {
+          width: 15% !important;
+          text-align: center;
+        }
